# risk5-wip

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  notes
assets/: .gitignore  addiw.json.log.bz2  bbl.bz2  bbl.json.log.bz2  bbl.objdump.bz2  busybox.objdump.bz2  dts.txt  opcodes
assets/bitcalc/src/: main.rs
assets/compliance/tests/: ADDIW.elf  DIV.elf  DIVU.elf  I-ADDI-01.elf  I-AUIPC-01.elf  I-BEQ-01.elf  I-BGE-01.elf  I-BGEU-01.elf  I-BLT-01.elf  I-CSRRC-01.elf  I-CSRRCI-01.elf  I-CSRRS-01.elf  I-CSRRW-01.elf  I-CSRRWI-01.elf  I-DELAY_SLOTS-01.elf  I-ECALL-01.elf  I-ENDIANESS-01.elf  I-JAL-01.elf  I-JALR-01.elf  I-LB-01.elf  I-LBU-01.elf  I-LHU-01.elf  I-LUI-01.elf  I-MISALIGN_JMP-01.elf  I-NOP-01.elf  I-RF_width-01.elf  I-SLLI-01.elf  I-SLT-01.elf  I-SLTIU-01.elf  I-SLTU-01.elf  I-SRL-01.elf  I-SRLI-01.elf  I-SUB-01.elf  I-XOR-01.elf  REM.elf  REMU.elf  SLLIW.elf  SRAIW.elf
assets/compliance/tests-broken/: C.ADDI.elf  C.ADDI16SP.elf  C.AND.elf  C.ANDI.elf  C.JALR.elf  C.LI.elf  C.LUI.elf  C.LW.elf  C.MV.elf  C.OR.elf  C.SRLI.elf  DIVW.elf  MULHU.elf  MULW.elf  SLLW.elf
assets/spike/: spike
benches/: first1mil.rs
bitcalc/: Cargo.toml
compliance/lib/: spike
compliance/logs/: ADDIW.bincode.log.bz2  ADDIW.json.log.bz2  ADDW.bincode.log.bz2  ADDW.json.log.bz2  I-ENDIANESS-01.bincode.log.bz2  I-LUI-01.bincode.log.bz2  I-SLTI-01.json.log.bz2  SLLIW.bincode.log.bz2  SLLIW.json.log.bz2  SRAIW.bincode.log.bz2  SRAIW.json.log.bz2  SUBW.bincode.log.bz2  SUBW.json.log.bz2
compliance/tests/: ADDW.elf  I-ADD-01.elf  I-AND-01.elf  I-ANDI-01.elf  I-BLTU-01.elf  I-BNE-01.elf  I-CSRRSI-01.elf  I-EBREAK-01.elf  I-FENCE.I-01.elf  I-IO.elf  I-LH-01.elf  I-LW-01.elf  I-MISALIGN_LDST-01.elf  I-OR-01.elf  I-ORI-01.elf  I-RF_size-01.elf  I-RF_x0-01.elf  I-SB-01.elf  I-SH-01.elf  I-SLL-01.elf  I-SLTI-01.elf  I-SRA-01.elf  I-SRAI-01.elf  I-SW-01.elf  I-XORI-01.elf  SUBW.elf
compliance/tests-broken/: C.ADD.elf  C.ADDI4SPN.elf  C.JR.elf  C.SLLI.elf  C.SRAI.elf  C.SUB.elf  C.XOR.elf  MUL.elf  MULH.elf  MULHSU.elf  REMUW.elf  REMW.elf  SRAW.elf  SRLIW.elf  SRLW.elf
derive-insn/: Cargo.toml
derive-insn/src/: lib.rs
src/: .insn.rs.swp  .insns.rs.swp  .mmu.rs.swo  .opcodes.rs.swp  bitfield.rs  csrs.rs  elf_loader.rs  encoding.rs  insn.rs  insns.rs  insns2.rs  itypes.rs  lib.rs  log_runner.rs  matcher.rs  memory.rs  mmu.rs  mstatus.rs  opcodes.rs  processor.rs  regs.rs
src/bitfield/: interrupt.rs  mstatus.rs  satp.rs
src/insns/: amo.rs  comp.rs  csr.rs  mem.rs  mod.rs
src/logrunner/: json.rs  logger.rs  loglineiterator.rs  logtuplededupiterator.rs  logtupleiterator.rs  mod.rs  run.rs  transaction.rs
src/logrunner/bincode/: mod.rs
src/logrunner/json/: lineiterator.rs  tupleiterator.rs
src/memory/: block.rs  bytemap.rs  fake.rs  sv39.rs
src/processor/: csrs.rs
u1/: Cargo.toml
u1/src/: main.rs
