[package]
name = "risk5"
version = "0.1.0"
authors = ["Shane Gibbs <shane@hands.net.nz>"]

edition = "2018"

# [profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"
# debug = true
# lto = false

[dependencies]

elf = "0.0.10"
# log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
# log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
pretty_env_logger = "0.2"
# wasm-bindgen = "0.2"

serde = "1.0"
serde_derive = "1.0"

bincode = "1.0.1"
serde_json = "1.0"

lazy_static = "1.2.0"

[build-dependencies]
regex = "1"

[features]
default = []

[[bin]]
name = "risk5"
path = "bin/risk5.rs"

[[bin]]
name = "convert"
path = "bin/convert.rs"

[[bin]]
name = "logrunner"
path = "bin/logrunner.rs"
